--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,13 @@
+/* // <uniquifier>: Use a uniquifier for the class name */
+/* // <weight>: Use a value from 100 to 700 */
+
+/* .josefin-sans-<uniquifier> { */
+  /* font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal; */
+/* } */
+
 *,
 *:after,
 *:before {
@@ -5,7 +15,7 @@
   margin: 0;
   list-style-type: none;
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 *::selection {
@@ -14,13 +24,30 @@
 }
 
 body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--main-background);
 }
 
 .app-image {
   position: absolute;
   width: 100%;
+  min-height: 200px;
   z-index: -1;
+  background: url("/public/images/bg-mobile-dark.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.app-image img {
+  display: block;
+  max-height: 200px;
+}
+@media (min-width: 500px) {
+  .app-image {
+    background: url("/public/images/bg-desktop-dark.jpg");
+  }
 }
 
 main.ui {
@@ -29,6 +56,7 @@ main.ui {
   align-items: center;
   gap: 10px;
   flex-direction: column;
+  max-width: 520px;
   width: 100%;
   padding: 20px;
   padding-top: 40px;
@@ -66,11 +94,17 @@ input[type=checkbox] ~ .checkbox {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 1px solid var(--color-5);
+  border: 1px solid var(--color-7);
 }
 
 input:checked ~ .checkbox {
-  background-color: black;
+  border: none;
+  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+}
+
+.checkbox:after {
+  content: "";
+  position: absolute;
 }
 
 input::placeholder {
@@ -79,6 +113,7 @@ input::placeholder {
 }
 
 #content {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -92,12 +127,12 @@ input::placeholder {
   justify-content: flex-start;
   width: 100%;
   padding: 15px;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 #content .col {
   height: auto;
   overflow: auto;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 #content .todo-list {
   display: flex;
@@ -107,6 +142,8 @@ input::placeholder {
   gap: 0;
   width: 100%;
   flex-direction: column;
+  color: var(--color-5);
+  font-size: 1.2em;
 }
 #content .todo-list .todo {
   display: flex;
@@ -115,13 +152,30 @@ input::placeholder {
   gap: 10px;
   width: 100%;
   padding: 18px;
-  border-bottom: 1px solid var(--color-6);
+  border-bottom: 1px solid var(--color-7);
+}
+#content .todo-list .todo input {
+  cursor: pointer;
+}
+@media (min-width: 500px) {
+  #content .todo-list .todo input {
+    font-size: 0.8em;
+  }
 }
 #content .todo-list .todo .checkbox button {
   display: block;
   width: 20px;
   height: 20px;
-  visibility: hidden;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+#content .todo-list .todo:hover .checkbox {
+  border: 1px solid var(--neutral-blue);
+}
+#content .todo-list .todo.completed input {
+  opacity: 0.5;
+  text-decoration: line-through;
 }
 #content .todoInfo {
   display: flex;
@@ -130,10 +184,10 @@ input::placeholder {
   padding: 18px;
   color: var(--color-5);
   font-size: 1em;
-  font-weight: 500;
+  font-weight: bold;
 }
-#content .todoInfo .info {
-  font-size: 1em;
+#content .todoInfo .action.btn {
+  font-weight: bold;
 }
 #content .todoInfo button {
   font-size: 0.8em;
@@ -144,21 +198,43 @@ input::placeholder {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  position: absolute;
+  bottom: -80px;
+  max-width: 500px;
   width: 100%;
+  align-self: center;
+  flex: 1;
   padding: 18px;
-  border-radius: 8px;
+  border-radius: 6px;
   align-items: center;
   justify-content: center;
+}
+@media (min-width: 500px) {
+  #content .action-list {
+    width: max-content;
+    bottom: 0;
+    padding: 18px;
+    background-color: transparent;
+  }
 }
 #content .btn {
   font-size: 1em;
 }
 #content .action.btn {
   color: var(--color-5);
-  font-weight: bolder;
   border: none;
   outline: none;
   background: transparent;
+}
+#content .action.btn:hover {
+  color: var(--text-color-hover);
+}
+#content .action.btn:active {
+  color: var(--neutral-blue);
+}
+#content .action-list .action.btn {
+  font-weight: bolder;
+  font-size: 0.9em;
 }
 
 li, form, .action-list, .todoInfo {
