--- a/src/css/sass/dark-theme.scss
+++ b/src/css/sass/dark-theme.scss
@@ -1,8 +1,9 @@
 :root {
-  --main-background: hsl(235, 24%, 19%);
-  --list-background: hsl(237, 14%, 26%);
+  --neutral-blue: hsl(220, 98%, 61%);
+  --main-background: hsl(235, 21%, 11%);
+  --list-background: hsl(235, 24%, 19%);
   --text-color: hsl(234, 39%, 85%);
-  --text-color-2: hsl(236, 33%, 92%);
+  --text-color-hover: hsl(236, 33%, 92%);
   --color-5: hsl(234, 11%, 52%);
   --color-6: hsl(233, 14%, 35%);
   --color-7: hsl(237, 14%, 26%);
