--- a/src/css/sass/index.scss
+++ b/src/css/sass/index.scss
@@ -5,7 +5,6 @@
   margin: 0;
   list-style-type: none;
   box-sizing: border-box;
-  font-family: monospace;
 }
 
 *::selection {
@@ -14,6 +13,11 @@
 }
 
 body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // justify-content: center;
   background-color: var(--main-background);
 }
 
@@ -27,12 +31,26 @@ body {
 .app-image {
   position: absolute;
   width: 100%;
+  min-height: 200px;
   z-index: -1;
+  background: url('/public/images/bg-mobile-dark.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  img {
+    display: block;
+    max-height: 200px;
+  }
+
+  @media (min-width: 500px) {
+    background: url('/public/images/bg-desktop-dark.jpg');
+  }
 }
 
 main.ui {
   @include flex;
   flex-direction: column;
+  max-width: 520px;
   width: 100%;
   padding: 20px;
   padding-top: 40px;
@@ -66,11 +84,18 @@ input[type='checkbox'] ~ .checkbox{
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 1px solid var(--color-5);
+  border: 1px solid var(--color-7);
 }
 
 input:checked ~ .checkbox{
-  background-color: black;
+  border: none;
+  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+}
+
+.checkbox:after {
+  content: "";
+  position: absolute;
+
 }
 
 input::placeholder {
@@ -79,6 +104,7 @@ input::placeholder {
 }
 
 #content {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -89,31 +115,51 @@ input::placeholder {
     justify-content: flex-start;
     width: 100%;
     padding: 15px;
-    border-radius: 8px;
+    border-radius: 6px;
   }
 
   .col {
     height: auto;
     overflow: auto;
-    border-radius: 8px;
+    border-radius: 6px;
   }
 
   .todo-list {
     @include flex; gap: 0;
     width: 100%;
     flex-direction: column;
+    color: var(--color-5);
+    font-size: 1.2em;
 
     .todo {
       @include flex;
       width: 100%;
       padding: 18px;
-      border-bottom: 1px solid var(--color-6);
+      border-bottom: 1px solid var(--color-7);
 
+      input { cursor: pointer; }
+
+      @media (min-width: 500px) {
+        input { font-size: .8em; }
+      }
       .checkbox button {
         display: block;
         width: 20px;
         height: 20px;
-        visibility: hidden;
+        border: none;
+        outline: none;
+        background-color: transparent;
+      }
+
+      &:hover .checkbox{
+        border: 1px solid var(--neutral-blue);
+      }
+    }
+
+    .todo.completed {
+      input {
+        opacity: .5;
+        text-decoration: line-through;
       }
     }
   }
@@ -125,33 +171,64 @@ input::placeholder {
     padding: 18px;    
     color: var(--color-5);
     font-size: 1em;
-    font-weight: 500;
-    .info { font-size: 1em; }
+    font-weight: bold;
+
+    .action.btn {
+      font-weight: bold;
+    }
+    // span.info {
+    //   display: block;
+    //   // font-size: 1em;
+    //   font-weight: bolder;
+    // }
 
     button {
-      font-size: 0.8em;
+      font-size: .8em;
       border: none;
     }
   }
 
   .action-list {
     @include flex;
+    position: absolute;
+    bottom: -80px;
+    max-width: 500px;
     width: 100%;
+    align-self: center;
+    flex: 1;
     padding: 18px;
-    border-radius: 8px;
-    // font-weight: bold;
+    border-radius: 6px;
     align-items: center;
     justify-content: center;
+
+    @media (min-width: 500px) {
+      width: max-content;
+      bottom: 0;
+      padding: 18px;
+      background-color: transparent;
+    }
   }
 
   .btn { font-size: 1em; }
 
   .action.btn {
     color: var(--color-5);
-    font-weight: bolder;
     border: none;
     outline: none;
     background: transparent;
+  }
+
+  .action.btn:hover {
+    color: var(--text-color-hover);
+  }
+
+  .action.btn:active {
+    color: var(--neutral-blue);
+  }
+
+  .action-list .action.btn {
+    font-weight: bolder;
+    font-size: .9em;
   }
 }
 
