--- a/src/css/dark-theme.css
+++ b/src/css/dark-theme.css
@@ -1,5 +1,5 @@
 :root {
-  --neutral-blue: hsl(220, 98%, 61%);
+  --hover-state: hsl(220, 98%, 61%);
   --main-background: hsl(235, 21%, 11%);
   --list-background: hsl(235, 24%, 19%);
   --text-color: hsl(234, 39%, 85%);
@@ -7,6 +7,19 @@
   --color-5: hsl(234, 11%, 52%);
   --color-6: hsl(233, 14%, 35%);
   --color-7: hsl(237, 14%, 26%);
+}
+
+.app-image {
+  background: url("/public/images/bg-mobile-dark.jpg");
+}
+@media (min-width: 500px) {
+  .app-image {
+    background: url("/public/images/bg-desktop-dark.jpg");
+  }
+}
+
+#content .action.btn:hover {
+  color: var(--text-color-hover);
 }
 
 /*# sourceMappingURL=dark-theme.css.map */
