--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,21 +1,12 @@
-/* // <uniquifier>: Use a uniquifier for the class name */
-/* // <weight>: Use a value from 100 to 700 */
-
-/* .josefin-sans-<uniquifier> { */
-  /* font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal; */
-/* } */
-
 *,
 *:after,
 *:before {
   padding: 0;
   margin: 0;
   list-style-type: none;
+  outline: none;
+  border: none;
   box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
 }
 
 *::selection {
@@ -36,18 +27,12 @@ body {
   width: 100%;
   min-height: 200px;
   z-index: -1;
-  background: url("/public/images/bg-mobile-dark.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
 .app-image img {
   display: block;
   max-height: 200px;
-}
-@media (min-width: 500px) {
-  .app-image {
-    background: url("/public/images/bg-desktop-dark.jpg");
-  }
 }
 
 main.ui {
@@ -70,6 +55,10 @@ main.ui .header {
   gap: 10px;
   width: 100%;
   justify-content: space-between;
+}
+main.ui .header button {
+  background-color: transparent;
+  border: none;
 }
 main.ui .header h1 {
   font-size: 1.7em;
@@ -102,9 +91,20 @@ input:checked ~ .checkbox {
   background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
 
-.checkbox:after {
-  content: "";
+.check {
   position: absolute;
+  display: none;
+}
+
+input:checked ~ .check {
+  display: block;
+}
+
+.checkboxContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input::placeholder {
@@ -112,12 +112,16 @@ input::placeholder {
   font-weight: bold;
 }
 
+input:focus {
+  color: black;
+}
+
 #content {
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 #content .todo-form {
   display: flex;
@@ -142,7 +146,6 @@ input::placeholder {
   gap: 0;
   width: 100%;
   flex-direction: column;
-  color: var(--color-5);
   font-size: 1.2em;
 }
 #content .todo-list .todo {
@@ -162,6 +165,9 @@ input::placeholder {
     font-size: 0.8em;
   }
 }
+#content .todo-list .todo:hover input {
+  color: var(--text-color-hover);
+}
 #content .todo-list .todo .checkbox button {
   display: block;
   width: 20px;
@@ -171,7 +177,7 @@ input::placeholder {
   background-color: transparent;
 }
 #content .todo-list .todo:hover .checkbox {
-  border: 1px solid var(--neutral-blue);
+  border: 1px solid var(--hover-state);
 }
 #content .todo-list .todo.completed input {
   opacity: 0.5;
@@ -199,7 +205,7 @@ input::placeholder {
   align-items: center;
   gap: 10px;
   position: absolute;
-  bottom: -80px;
+  bottom: -70px;
   max-width: 500px;
   width: 100%;
   align-self: center;
@@ -230,7 +236,7 @@ input::placeholder {
   color: var(--text-color-hover);
 }
 #content .action.btn:active {
-  color: var(--neutral-blue);
+  color: hsl(220, 98%, 61%);
 }
 #content .action-list .action.btn {
   font-weight: bolder;
