--- a/src/css/sass/dark-theme.scss
+++ b/src/css/sass/dark-theme.scss
@@ -1,5 +1,5 @@
 :root {
-  --neutral-blue: hsl(220, 98%, 61%);
+  --hover-state: hsl(220, 98%, 61%);
   --main-background: hsl(235, 21%, 11%);
   --list-background: hsl(235, 24%, 19%);
   --text-color: hsl(234, 39%, 85%);
@@ -10,10 +10,14 @@
 }
 
 
-// - Very Dark Blue: hsl(235, 21%, 11%)
-// - Very Dark Desaturated Blue: hsl(235, 24%, 19%)
-// - Light Grayish Blue: hsl(234, 39%, 85%)
-// - Light Grayish Blue (hover): hsl(236, 33%, 92%)
-// - Dark Grayish Blue: hsl(234, 11%, 52%)
-// - Very Dark Grayish Blue: hsl(233, 14%, 35%)
-// - Very Dark Grayish Blue: hsl(237, 14%, 26%)
+.app-image {
+  background: url('/public/images/bg-mobile-dark.jpg');
+
+  @media (min-width: 500px) {
+    background: url('/public/images/bg-desktop-dark.jpg');
+  }
+}
+
+#content .action.btn:hover {
+  color: var(--text-color-hover);
+}
