--- a/src/css/sass/index.scss
+++ b/src/css/sass/index.scss
@@ -7,7 +7,7 @@
   outline: none;
   border: none;
   box-sizing: border-box;
-  font-family: "Josef Sans";
+  font-family: "Josefin Sans";
 }
 
 *::selection {
