--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,251 +1,1 @@
-*,
-*:after,
-*:before {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  outline: none;
-  border: none;
-  box-sizing: border-box;
-}
-
-*::selection {
-  color: white;
-  background-color: black;
-}
-
-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--main-background);
-}
-
-.app-image {
-  position: absolute;
-  width: 100%;
-  min-height: 200px;
-  z-index: -1;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.app-image img {
-  display: block;
-  max-height: 200px;
-}
-
-main.ui {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-direction: column;
-  max-width: 520px;
-  width: 100%;
-  padding: 20px;
-  padding-top: 40px;
-  gap: 30px;
-  align-items: flex-start;
-}
-main.ui .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  justify-content: space-between;
-}
-main.ui .header button {
-  background-color: transparent;
-  border: none;
-}
-main.ui .header h1 {
-  font-size: 1.7em;
-  color: white;
-}
-
-input {
-  width: 100%;
-  color: var(--text-color);
-  border: none;
-  outline: none;
-  background-color: transparent;
-}
-
-input[type=checkbox] {
-  display: none;
-}
-
-input[type=checkbox] ~ .checkbox {
-  position: relative;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 1px solid var(--color-7);
-}
-
-input:checked ~ .checkbox {
-  border: none;
-  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
-}
-
-.check {
-  position: absolute;
-  display: none;
-}
-
-input:checked ~ .check {
-  display: block;
-}
-
-.checkboxContainer {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-input::placeholder {
-  color: var(--color-5);
-  font-weight: bold;
-}
-
-input:focus {
-  color: black;
-}
-
-#content {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-#content .todo-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  justify-content: flex-start;
-  width: 100%;
-  padding: 15px;
-  border-radius: 6px;
-}
-#content .col {
-  height: auto;
-  overflow: auto;
-  border-radius: 6px;
-}
-#content .todo-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  gap: 0;
-  width: 100%;
-  flex-direction: column;
-  font-size: 1.2em;
-}
-#content .todo-list .todo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  padding: 18px;
-  border-bottom: 1px solid var(--color-7);
-}
-#content .todo-list .todo input {
-  cursor: pointer;
-}
-@media (min-width: 500px) {
-  #content .todo-list .todo input {
-    font-size: 0.8em;
-  }
-}
-#content .todo-list .todo:hover input {
-  color: var(--text-color-hover);
-}
-#content .todo-list .todo .checkbox button {
-  display: block;
-  width: 20px;
-  height: 20px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-}
-#content .todo-list .todo:hover .checkbox {
-  border: 1px solid var(--hover-state);
-}
-#content .todo-list .todo.completed input {
-  opacity: 0.5;
-  text-decoration: line-through;
-}
-#content .todoInfo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 18px;
-  color: var(--color-5);
-  font-size: 1em;
-  font-weight: bold;
-}
-#content .todoInfo .action.btn {
-  font-weight: bold;
-}
-#content .todoInfo button {
-  font-size: 0.8em;
-  border: none;
-}
-#content .action-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  position: absolute;
-  bottom: -70px;
-  max-width: 500px;
-  width: 100%;
-  align-self: center;
-  flex: 1;
-  padding: 18px;
-  border-radius: 6px;
-  align-items: center;
-  justify-content: center;
-}
-@media (min-width: 500px) {
-  #content .action-list {
-    width: max-content;
-    bottom: 0;
-    padding: 18px;
-    background-color: transparent;
-  }
-}
-#content .btn {
-  font-size: 1em;
-}
-#content .action.btn {
-  color: var(--color-5);
-  border: none;
-  outline: none;
-  background: transparent;
-}
-#content .action.btn:hover {
-  color: var(--text-color-hover);
-}
-#content .action.btn:active {
-  color: hsl(220, 98%, 61%);
-}
-#content .action-list .action.btn {
-  font-weight: bolder;
-  font-size: 0.9em;
-}
-
-li, form, .action-list, .todoInfo {
-  border: none;
-  background: var(--list-background);
-}
-
-/*# sourceMappingURL=index.css.map */
+*,*:after,*:before{padding:0;margin:0;list-style-type:none;outline:none;border:none;box-sizing:border-box;font-family:"Josefin Sans"}*::selection{color:#fff;background-color:#000}body{min-height:100vh;display:flex;flex-direction:column;align-items:center;background-color:var(--main-background)}.app-image{position:absolute;width:100%;min-height:200px;z-index:-1;background-size:cover;background-repeat:no-repeat}.app-image img{display:block;max-height:200px}main.ui{display:flex;justify-content:center;align-items:center;gap:10px;flex-direction:column;align-items:flex-start;gap:30px;max-width:520px;width:100%;padding:20px;padding-top:40px;margin:0 auto}main.ui .header{display:flex;justify-content:center;align-items:center;gap:10px;width:100%;justify-content:space-between}main.ui .header button{background-color:rgba(0,0,0,0);border:none}main.ui .header h1{font-size:1.7em;color:#fff}input{width:100%;color:var(--text-color);border:none;outline:none;background-color:rgba(0,0,0,0)}input[type=checkbox]{display:none}input[type=checkbox]~.checkbox{position:relative;display:inline-block;width:20px;height:20px;border-radius:50%;border:1px solid var(--color-7)}input:checked~.checkbox{border:none;background:linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%))}.check{position:absolute;display:none}input:checked~.check{display:block}.checkboxContainer{position:relative;display:flex;align-items:center;justify-content:center}input::placeholder{color:var(--color-5);font-weight:bold}input:focus{color:#000}#content{position:relative;width:100%;display:flex;flex-direction:column;gap:15px}#content .todo-form{display:flex;justify-content:center;align-items:center;gap:10px;justify-content:flex-start;width:100%;padding:15px;border-radius:6px}#content .todo-form [name=todo-data]{color:var(--text-color)}#content .col{height:auto;overflow:auto;border-radius:6px}#content .todo-list{display:flex;justify-content:center;align-items:center;gap:10px;gap:0;width:100%;flex-direction:column;font-size:1.2em}#content .todo-list .todo{display:flex;justify-content:center;align-items:center;gap:10px;width:100%;padding:18px;border-bottom:1px solid var(--color-7)}#content .todo-list .todo input{cursor:pointer}@media(min-width: 500px){#content .todo-list .todo input{font-size:.8em}}#content .todo-list .todo:hover input{color:var(--text-color-hover)}#content .todo-list .todo .checkbox button{display:block;width:20px;height:20px;border:none;outline:none;background-color:rgba(0,0,0,0)}#content .todo-list .todo:hover .checkbox{border:1px solid var(--hover-state)}#content .todo-list .todo.completed input{opacity:.5;text-decoration:line-through}#content .todoInfo{display:flex;align-items:center;justify-content:space-between;padding:18px;color:var(--color-5);font-size:1em;font-weight:bold}#content .todoInfo .action.btn{font-weight:bold}#content .todoInfo button{font-size:.8em;border:none}#content .action-list{display:flex;justify-content:center;align-items:center;gap:10px;position:absolute;bottom:-70px;max-width:500px;width:100%;align-self:center;flex:1;padding:18px;border-radius:6px;align-items:center;justify-content:center}@media(min-width: 500px){#content .action-list{width:max-content;bottom:0;padding:18px;background-color:rgba(0,0,0,0)}}#content .btn{font-size:1em}#content .action.btn{color:var(--color-5);border:none;outline:none;background:rgba(0,0,0,0)}#content .action.btn:hover{color:var(--text-color-hover)}#content .action.btn:active{color:hsl(220,98%,61%)}#content .action-list .action.btn{font-weight:bolder;font-size:.9em}li,form,.action-list,.todoInfo{border:none;background:var(--list-background)}/*# sourceMappingURL=index.css.map */
