--- a/src/css/sass/index.scss
+++ b/src/css/sass/index.scss
@@ -48,12 +48,13 @@ body {
 main.ui {
   @include flex;
   flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
   max-width: 520px;
   width: 100%;
   padding: 20px;
   padding-top: 40px;
-  gap: 30px;
-  align-items: flex-start;
+  margin: 0 auto;
 
   .header {
     @include flex;
