--- a/src/scss/light-theme.scss
+++ b/src/scss/light-theme.scss
@@ -14,10 +14,10 @@
 }
 
 .app-image {
-  background: url('/public/images/bg-mobile-light.jpg');
+  background: url('/images/bg-mobile-light.jpg');
 
   @media (min-width: 500px) {
-    background: url('/public/images/bg-desktop-light.jpg');
+    background: url('/images/bg-desktop-light.jpg');
   }
 }
 
