Seperated css styles into modules
Minor code improvements

--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -1,24 +1,1 @@
-:root {
-  --hover-state: hsl(220, 98%, 61%);
-  --main-background: hsl(235, 21%, 11%);
-  --list-background: hsl(235, 24%, 19%);
-  --text-color: hsl(234, 39%, 85%);
-  --text-color-hover: hsl(236, 33%, 92%);
-  --color-5: hsl(234, 11%, 52%);
-  --color-6: hsl(233, 14%, 35%);
-  --color-7: hsl(237, 14%, 26%);
-}
-
-.app-image {
-  background: url("/images/bg-mobile-dark.jpg");
-}
-
-@media (min-width: 500px) {
-  .app-image {
-    background: url("/images/bg-desktop-dark.jpg");
-  }
-}
-
-#content .action.btn:hover {
-  color: var(--text-color-hover);
-}
+:root{--hover-state: hsl(220, 98%, 61%);--main-background: hsl(235, 21%, 11%);--list-background: hsl(235, 24%, 19%);--text-color: hsl(234, 39%, 85%);--text-color-hover: hsl(236, 33%, 92%);--color-5: hsl(234, 11%, 52%);--color-6: hsl(233, 14%, 35%);--color-7: hsl(237, 14%, 26%)}.background-image{background:url("/images/bg-mobile-dark.jpg")}@media(min-width: 500px){.background-image{background:url("/images/bg-desktop-dark.jpg")}}#content .action.btn:hover{color:var(--text-color-hover)}
