--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,96 +1,15 @@
- *,
- *:after,
- *:before {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  outline: none;
-  border: none;
-  box-sizing: border-box;
-  font-family: "Josefin Sans";
-}
-
-*::selection {
-  color: white;
-  background-color: black;  
-}
+ @import "./config/reset";
+ @import "./config/mixins";
 
 body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: center;
   background-color: var(--main-background);
 }
 
-@mixin flex (
-  $gap: 10px,
-  $direction: row
-){
-  display: flex;
-  flex-direction: $direction;
-  justify-content: center;
-  align-items: center;
-  gap: $gap;
-}
-
-.todo.dashboard {
-  width: 100%;
-  position: relative;
-  @include flex ($gap: 1rem, $direction: column);
-  
-  .col {
-    width: 100%;
-    height: auto;
-    overflow: auto;
-    border-radius: 6px;
-  }
-  
-  .action-list {
-    @include flex;
-    max-width: 500px;
-    width: 100%;
-    align-self: center;
-    flex: 1;
-    padding: 18px;
-    border-radius: 6px;
-    align-items: center;
-    justify-content: center;
-
-    @media (min-width: 500px) {
-      position: absolute;
-      width: max-content;
-      bottom: 0;
-      padding: 18px;
-      background-color: transparent;
-    }
-  }
-
-  .btn { font-size: 1rem; }
-
-  .action.btn {
-    color: var(--color-5);
-    border: none;
-    outline: none;
-    background: transparent;
-  }
-  
-  .action.btn:hover{ 
-    color: var(--text-color-hover);
-  }
-
-  .action.btn:active {
-    color: hsl(220, 98%, 61%);
-  }
-
-  .action-list .action.btn {
-    font-weight: bolder;
-    font-size: .9rem;
-  }
-}
-
-.app-image {
+.background-image {
   position: absolute;
   width: 100%;
   min-height: 200px;
@@ -187,87 +106,4 @@ input:focus {
   display: flex;
   flex-direction: column;
   gap: 15px;
-
-  .todo-form {
-    @include flex;
-    justify-content: flex-start;
-    width: 100%;
-    padding: 15px;
-    border-radius: 6px;
-
-    [name="todo-data"] {
-      color: var(--text-color);
-    }
-  }
-  
-  .todo-list {
-    @include flex; gap: 0;
-    width: 100%;
-    flex-direction: column;
-    // color: dodgerblue;
-    font-size: 1.2em;
-
-    .todo {
-      @include flex;
-      width: 100%;
-      padding: 18px;
-      border-bottom: 1px solid var(--color-7);
-
-      input { cursor: pointer; }
-
-      @media (min-width: 500px) {
-        input { font-size: .8em; }
-      }
-
-      &:hover {
-        input {
-          color: var(--text-color-hover);
-        }
-      }
-
-      .checkbox button {
-        display: block;
-        width: 20px;
-        height: 20px;
-        border: none;
-        outline: none;
-        background-color: transparent;
-      }
-
-      &:hover .checkbox{
-        border: 1px solid var(--hover-state);
-      }
-    }
-
-    .todo.completed {
-      input {
-        opacity: .5;
-        text-decoration: line-through;
-      }
-    }
-  }
-
-  .todoInfo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px;    
-    color: var(--color-5);
-    font-size: 1em;
-    font-weight: bold;
-
-    .action.btn {
-      font-weight: bold;
-    }
-
-    button {
-      font-size: .8em;
-      border: none;
-    }
-  }
-}
-
-li, form, .action-list, .todoInfo {
-  border: none;
-  background: var(--list-background);
 }
