--- a/src/components/TodosTracker/todosTracker.module.scss
+++ b/src/components/TodosTracker/todosTracker.module.scss
@@ -4,14 +4,11 @@
   justify-content: space-between;
   padding: 18px;    
   color: var(--color-5);
-  font-size: 1em;
   font-weight: bold;
   background: var(--list-background);
   border: none;
-
-  button {
-    font-weight: bold;
-    font-size: .8em;
-    border: none;
+  
+  span, button {
+    font-weight: 500;
   }
 }
