added font import

--- a/src/scss/config/_reset.scss
+++ b/src/scss/config/_reset.scss
@@ -1,6 +1,8 @@
- *,
- *:after,
- *:before {
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+*,
+*:after,
+*:before {
   padding: 0;
   margin: 0;
   list-style-type: none;
