--- a/src/css/sass/index.scss
+++ b/src/css/sass/index.scss
@@ -17,9 +17,7 @@
 }
 
 .app-image {
-  // position: absolute;
   width: 100%;
-  // z-index: -1;
 }
 
 main.ui {
@@ -28,7 +26,6 @@ main.ui {
   width: 100%;
   padding: 30px;
   align-items: flex-start;
-  // border: 2px solid purple;
 
   .header {
     @extend %flex;
@@ -41,7 +38,7 @@ main.ui {
 
 input {
   width: 100%;
-  padding: 10px;
+  // padding: 10px;
   border: none;
   outline: none;
 }
@@ -69,7 +66,7 @@ input:checked ~ span.checkbox{
     @extend %flex;
     justify-content: flex-start;
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     border: 1px solid black;
   }
 
@@ -86,7 +83,7 @@ input:checked ~ span.checkbox{
     .todo {
       @extend %flex;
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       border-bottom: 1px solid black;
 
       input { border: none; }
@@ -96,7 +93,7 @@ input:checked ~ span.checkbox{
   .todoInfo {
     display: flex;
     justify-content: space-between;
-    padding: 12px;
+    padding: 10px;
 
     button {
       border: none;
@@ -107,7 +104,7 @@ input:checked ~ span.checkbox{
   .action-list {
     @extend %flex;
     width: 100%;
-    padding: 12px;
+    padding: 10px;
     justify-content: space-evenly;
     border: 1px solid black;
   }
