--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,12 @@
   margin: 0;
   list-style-type: none;
   box-sizing: border-box;
+  font-family: monospace;
+}
+
+*::selection {
+  color: white;
+  background-color: black;
 }
 
 body {
@@ -54,7 +60,8 @@ input[type=checkbox] {
   display: none;
 }
 
-input[type=checkbox] ~ span.checkbox {
+input[type=checkbox] ~ .checkbox {
+  position: relative;
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -62,7 +69,7 @@ input[type=checkbox] ~ span.checkbox {
   border: 1px solid var(--color-5);
 }
 
-input:checked ~ span.checkbox {
+input:checked ~ .checkbox {
   background-color: black;
 }
 
@@ -109,6 +116,12 @@ input::placeholder {
   width: 100%;
   padding: 18px;
   border-bottom: 1px solid var(--color-6);
+}
+#content .todo-list .todo .checkbox button {
+  display: block;
+  width: 20px;
+  height: 20px;
+  visibility: hidden;
 }
 #content .todoInfo {
   display: flex;
